fixing spacing in-between everything

--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,7 @@ font-weight: 400;
 width: 100%;
 position: relative;
 overflow:hidden;
+margin-bottom:-.5em;
 }
 
 .billboard {
@@ -183,7 +184,6 @@ color: white;
 	color: black;
 	cursor: pointer;
 	width: 235px;
-	height: 60px;
 	text-align:center;
 	border: black solid 2px;
   border-radius: .5em;
